unpackaged/main/default/objects/Contact/fields/FS_Gender__c.field-meta.xml
<CustomField>
    <fullName>FS_Gender__c</fullName>
    <inlineHelpText>Gender Identity. Select all that apply</inlineHelpText>
    <label>Gender Identity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Non-binary</fullName>
            </value>
            <value>
                <fullName>Transgender</fullName>
            </value>
            <value>
                <fullName>Cisgender</fullName>
            </value>
            <value>
                <fullName>Intersex</fullName>
            </value>
            <value>
                <fullName>Decline to Answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>