unpackaged/main/default/objects/Contact/fields/FS_General_NYSBA_Notice__c.field-meta.xml
<CustomField>
    <fullName>FS_General_NYSBA_Notice__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Category of bulk email messages on general topics</inlineHelpText>
    <label>General NYSBA Notice</label>
    <type>Checkbox</type>
</CustomField>