unpackaged/main/default/objects/Contact/fields/FS_Global_eNewsletter__c.field-meta.xml
<CustomField>
    <fullName>FS_Global_eNewsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Category of bulk email messages aimed at attorneys outside of the United States</inlineHelpText>
    <label>Global eNewsletter</label>
    <type>Checkbox</type>
</CustomField>