unpackaged/main/default/objects/Contact/fields/FS_GP_Section_webrief_eNewsletter__c.field-meta.xml
<CustomField>
    <fullName>FS_GP_Section_webrief_eNewsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Category of bulk email message sent to members of the General Practice Section</inlineHelpText>
    <label>GP Section wEbrief eNewsletter</label>
    <type>Checkbox</type>
</CustomField>