unpackaged/main/default/objects/Contact/fields/FS_Graduation_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Graduation_Date__c</fullName>
    <label>Graduation Date</label>
    <type>Date</type>
</CustomField>