unpackaged/main/default/objects/Contact/fields/FS_Has_CASL_Compliant_Transaction__c.field-meta.xml
<CustomField>
    <fullName>FS_Has_CASL_Compliant_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Contact has done business with NYSBA in the last 2 years. This is as of date 4/14</inlineHelpText>
    <label>Has CASL-Compliant Transaction</label>
    <type>Checkbox</type>
</CustomField>