unpackaged/main/default/objects/Contact/fields/FS_HOD_JD__c.field-meta.xml
<CustomField>
    <fullName>FS_HOD_JD__c</fullName>
    <description>This formula field pulls from the Work/School Judicial District as long as the HOD JD Override field is not populated.</description>
    <formula>IF(ISBLANK( HOD_JD_Override__c ),  FS_Work_School_Judicial_District__c ,  HOD_JD_Override__c )</formula>
    <inlineHelpText>This formula field pulls from the Work/School Judicial District as long as the HOD JD Override field is not populated.</inlineHelpText>
    <label>HOD JD</label>
    <type>Text</type>
</CustomField>