unpackaged/main/default/objects/Contact/fields/FS_I_accept_NYSBA_s_Terms_of_Service__c.field-meta.xml
<CustomField>
    <fullName>FS_I_accept_NYSBA_s_Terms_of_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Contact's acceptance of NYSBA’s Terms of Service</inlineHelpText>
    <label>I accept NYSBA’s Terms of Service</label>
    <type>Checkbox</type>
</CustomField>