unpackaged/main/default/objects/Contact/fields/FS_In_State__c.field-meta.xml
<CustomField>
    <fullName>FS_In_State__c</fullName>
    <formula>(MailingCountry = "United States" &amp;&amp; MailingState = "New York") || (OtherCountry = "United States"  &amp;&amp; OtherState = "New York")</formula>
    <inlineHelpText>Checked if Home or Work/School State of the contact is New York</inlineHelpText>
    <label>In State</label>
    <type>Checkbox</type>
</CustomField>