unpackaged/main/default/objects/Contact/fields/FS_IssueDate__c.field-meta.xml
<CustomField>
    <fullName>FS_IssueDate__c</fullName>
    <label>Issue Date</label>
    <type>Date</type>
</CustomField>