unpackaged/main/default/objects/Contact/fields/FS_Law_School__c.field-meta.xml
<CustomField>
    <fullName>FS_Law_School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Law School field to be used in the Membership Join Process</description>
    <label>Law School</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts (Law School)</relationshipLabel>
    <relationshipName>Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>