unpackaged/main/default/objects/Contact/fields/FS_Link_to_Proof_Attorney_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_Link_to_Proof_Attorney_Status__c</fullName>
    <label>Link to Proof Attorney Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>