unpackaged/main/default/objects/Contact/fields/FS_LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>FS_LinkedIn__c</fullName>
    <label>LinkedIn</label>
    <type>TextArea</type>
</CustomField>