unpackaged/main/default/objects/Contact/fields/FS_Mailing_County__c.field-meta.xml
<CustomField>
    <fullName>FS_Mailing_County__c</fullName>
    <formula>IF(FS_Tax_Exempt_Number__c &lt;&gt; NULL, "Tax Exempt",
IF(NOT(MailingState = "New York"), "Out of State",
IF(smartystreets__Mailing_Verified__c &amp;&amp; MailingState = "New York",
IF(CONTAINS(FS_API_Mailing_County__c, "Westchester") &amp;&amp; CONTAINS(MailingCity, "Yonkers"), "City of Yonkers Westchester", FS_API_Mailing_County__c),"New York State")))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work/School Tax County</label>
    <type>Text</type>
</CustomField>