unpackaged/main/default/objects/Contact/fields/FS_Mailing_State_Code__c.field-meta.xml
<CustomField>
    <fullName>FS_Mailing_State_Code__c</fullName>
    <formula>TEXT(MailingStateCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the state code for the work address</inlineHelpText>
    <label>Work/School State Code</label>
    <type>Text</type>
</CustomField>