unpackaged/main/default/objects/Contact/fields/FS_Marked_Deceased_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Marked_Deceased_Date__c</fullName>
    <inlineHelpText>Date the contact was marked as deceased</inlineHelpText>
    <label>Marked Deceased Date</label>
    <type>Date</type>
</CustomField>