unpackaged/main/default/objects/Contact/fields/FS_Member_Continuous_Since__c.field-meta.xml
<CustomField>
    <fullName>FS_Member_Continuous_Since__c</fullName>
    <inlineHelpText>Most recent re-join date for membership</inlineHelpText>
    <label>Re-Join Date</label>
    <type>Date</type>
</CustomField>