unpackaged/main/default/objects/Contact/fields/FS_Member_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_Member_Status__c</fullName>
    <label>Member Status DO NOT USE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>