unpackaged/main/default/objects/Contact/fields/FS_Membership_Days_to_Expire__c.field-meta.xml
<CustomField>
    <fullName>FS_Membership_Days_to_Expire__c</fullName>
    <description>It will calculate how many days are remaining for a membership</description>
    <formula>FS_Membership_Expiry_Date__c -  TODAY()</formula>
    <inlineHelpText>It will calculate how many days are remaining for a membership</inlineHelpText>
    <label>Membership Days to Expire</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>