unpackaged/main/default/objects/Contact/fields/FS_Membership_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Membership_Expiry_Date__c</fullName>
    <inlineHelpText>Expiry date of membership</inlineHelpText>
    <label>Membership Expiry Date</label>
    <type>Date</type>
</CustomField>