unpackaged/main/default/objects/Contact/fields/FS_Membership_Grace_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Membership_Grace_Period_End_Date__c</fullName>
    <description>Furthest out membership's Grace Period End Date.</description>
    <inlineHelpText>Furthest out membership's Grace Period End Date.</inlineHelpText>
    <label>Membership Grace Period End Date</label>
    <type>Date</type>
</CustomField>