unpackaged/main/default/objects/Contact/fields/FS_Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_Membership_Type__c</fullName>
    <description>Display Membership Type</description>
    <label>Membership Type</label>
    <type>TextArea</type>
</CustomField>