unpackaged/main/default/objects/Contact/fields/FS_No_Automatic_Book_Supplements__c.field-meta.xml
<CustomField>
    <fullName>FS_No_Automatic_Book_Supplements__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do not automatically send (and bill for) updates/supplements related to previous NYSBA book purchases</inlineHelpText>
    <label>No Automatic Book Supplements</label>
    <type>Checkbox</type>
</CustomField>