unpackaged/main/default/objects/Contact/fields/FS_No_Law_Digest_Mail__c.field-meta.xml
<CustomField>
    <fullName>FS_No_Law_Digest_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do not send a hard copy mailing of the NYSBA Law Digest</inlineHelpText>
    <label>No Law Digest Mail</label>
    <type>Checkbox</type>
</CustomField>