unpackaged/main/default/objects/Contact/fields/FS_No_Lawyer_Referral_Mail_Legacy__c.field-meta.xml
<CustomField>
    <fullName>FS_No_Lawyer_Referral_Mail_Legacy__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Data from NYSBA's legacy system (iMIS). Lawyer Referral Mail is sent very infrequently, so this field is generally not applicable.</inlineHelpText>
    <label>No Lawyer Referral Mail (Legacy)</label>
    <type>Checkbox</type>
</CustomField>