unpackaged/main/default/objects/Contact/fields/FS_No_Membership_Mail__c.field-meta.xml
<CustomField>
    <fullName>FS_No_Membership_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do not send hard copy mailings related to NYSBA membership (e.g., invitations to join)</inlineHelpText>
    <label>No Membership Mail</label>
    <type>Checkbox</type>
</CustomField>