unpackaged/main/default/objects/Contact/fields/FS_No_NYSBA_Journal_Mail__c.field-meta.xml
<CustomField>
    <fullName>FS_No_NYSBA_Journal_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No NYSBA Journal Mail</label>
    <type>Checkbox</type>
</CustomField>