unpackaged/main/default/objects/Contact/fields/FS_No_State_Bar_News_Mail__c.field-meta.xml
<CustomField>
    <fullName>FS_No_State_Bar_News_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do not send a hard copy mailing of the State Bar News</inlineHelpText>
    <label>No State Bar News Mail</label>
    <type>Checkbox</type>
</CustomField>