unpackaged/main/default/objects/Contact/fields/FS_No_Telemarketing__c.field-meta.xml
<CustomField>
    <fullName>FS_No_Telemarketing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do not call as part of any telephone campaign</inlineHelpText>
    <label>No Telemarketing</label>
    <type>Checkbox</type>
</CustomField>