unpackaged/main/default/objects/Contact/fields/FS_No_Vendor_Mail__c.field-meta.xml
<CustomField>
    <fullName>FS_No_Vendor_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do not send hard copy mail from NYSBA 3rd party vendors</inlineHelpText>
    <label>No Vendor Mail</label>
    <type>Checkbox</type>
</CustomField>