unpackaged/main/default/objects/Contact/fields/FS_Number_of_Attorneys_in_Organization__c.field-meta.xml
<CustomField>
    <fullName>FS_Number_of_Attorneys_in_Organization__c</fullName>
    <label>Number of Attorneys in Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOLO</fullName>
            </value>
            <value>
                <fullName>02-05</fullName>
            </value>
            <value>
                <fullName>06-09</fullName>
            </value>
            <value>
                <fullName>10-19</fullName>
            </value>
            <value>
                <fullName>100+</fullName>
            </value>
            <value>
                <fullName>20-49</fullName>
            </value>
            <value>
                <fullName>50-99</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>