unpackaged/main/default/objects/Contact/fields/FS_NYS_Admission_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_NYS_Admission_Date__c</fullName>
    <label>NYS Admission Date</label>
    <type>Date</type>
</CustomField>