unpackaged/main/default/objects/Contact/fields/FS_NYS_Attorney_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>FS_NYS_Attorney_Registration_Number__c</fullName>
    <label>NYS Attorney Registration Number</label>
    <length>7</length>
    <type>Text</type>
</CustomField>