unpackaged/main/default/objects/Contact/fields/FS_NYSBA_ID__c.field-meta.xml
<CustomField>
    <fullName>FS_NYSBA_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Will be updated to Auto-number(Read only) prior Go-live</inlineHelpText>
    <label>NYSBA ID</label>
    <type>AutoNumber</type>
</CustomField>