unpackaged/main/default/objects/Contact/fields/FS_NYSBA_Weekly_News__c.field-meta.xml
<CustomField>
    <fullName>FS_NYSBA_Weekly_News__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Category of bulk email messages</inlineHelpText>
    <label>NYSBA Weekly eNewsletter</label>
    <type>Checkbox</type>
</CustomField>