unpackaged/main/default/objects/Contact/fields/FS_OCA_Address_1__c.field-meta.xml
<CustomField>
    <fullName>FS_OCA_Address_1__c</fullName>
    <label>OCA Address 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>