unpackaged/main/default/objects/Contact/fields/FS_OCA_Address_2__c.field-meta.xml
<CustomField>
    <fullName>FS_OCA_Address_2__c</fullName>
    <label>OCA Address 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>