unpackaged/main/default/objects/Contact/fields/FS_OCA_City__c.field-meta.xml
<CustomField>
    <fullName>FS_OCA_City__c</fullName>
    <label>OCA City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>