unpackaged/main/default/objects/Contact/fields/FS_OCA_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_OCA_Company_Name__c</fullName>
    <label>OCA Company Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>