unpackaged/main/default/objects/Contact/fields/FS_OCA_Country__c.field-meta.xml
<CustomField>
    <fullName>FS_OCA_Country__c</fullName>
    <label>OCA Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>