unpackaged/main/default/objects/Contact/fields/FS_OCA_DOB__c.field-meta.xml
<CustomField>
    <fullName>FS_OCA_DOB__c</fullName>
    <label>OCA DOB</label>
    <type>Date</type>
</CustomField>