unpackaged/main/default/objects/Contact/fields/FS_OCA_Email__c.field-meta.xml
<CustomField>
    <fullName>FS_OCA_Email__c</fullName>
    <label>OCA Email</label>
    <type>Email</type>
</CustomField>