unpackaged/main/default/objects/Contact/fields/FS_OCA_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>FS_OCA_Last_Updated__c</fullName>
    <label>OCA Last Updated</label>
    <type>Date</type>
</CustomField>