unpackaged/main/default/objects/Contact/fields/FS_OCA_Law_School__c.field-meta.xml
<CustomField>
    <fullName>FS_OCA_Law_School__c</fullName>
    <label>OCA Law School</label>
    <length>80</length>
    <type>Text</type>
</CustomField>