unpackaged/main/default/objects/Contact/fields/FS_OCA_Next_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_OCA_Next_Registration_Date__c</fullName>
    <label>OCA Next Registration Date</label>
    <type>Date</type>
</CustomField>