unpackaged/main/default/objects/Contact/fields/FS_OCA_Oath_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_OCA_Oath_Date__c</fullName>
    <label>OCA Oath Date</label>
    <type>Date</type>
</CustomField>