unpackaged/main/default/objects/Contact/fields/FS_OCA_Phone__c.field-meta.xml
<CustomField>
    <fullName>FS_OCA_Phone__c</fullName>
    <label>OCA Phone</label>
    <length>30</length>
    <type>Text</type>
</CustomField>