unpackaged/main/default/objects/Contact/fields/FS_OCA_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>FS_OCA_Registration_Number__c</fullName>
    <label>OCA Registration Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>