unpackaged/main/default/objects/Contact/fields/FS_OCA_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_OCA_Report_Date__c</fullName>
    <label>OCA Report Date</label>
    <type>Date</type>
</CustomField>