unpackaged/main/default/objects/Contact/fields/FS_OCA_State_Province__c.field-meta.xml
<CustomField>
    <fullName>FS_OCA_State_Province__c</fullName>
    <label>OCA State/Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>