unpackaged/main/default/objects/Contact/fields/FS_OCA_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_OCA_Status__c</fullName>
    <label>OCA Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>