unpackaged/main/default/objects/Contact/fields/FS_OCA_Suffix__c.field-meta.xml
<CustomField>
    <fullName>FS_OCA_Suffix__c</fullName>
    <label>OCA Suffix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>