unpackaged/main/default/objects/Contact/fields/FS_OCA_Year_Admitted__c.field-meta.xml
<CustomField>
    <fullName>FS_OCA_Year_Admitted__c</fullName>
    <label>OCA Year Admitted</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>