unpackaged/main/default/objects/Contact/fields/FS_OCA_Zip__c.field-meta.xml
<CustomField>
    <fullName>FS_OCA_Zip__c</fullName>
    <label>OCA Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>