unpackaged/main/default/objects/Contact/fields/FS_Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Organization_Name__c</fullName>
    <inlineHelpText>Name of the organization the contact is tied to. This is for contact who who not have a primary affiliation.</inlineHelpText>
    <label>Organization Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>