unpackaged/main/default/objects/Contact/fields/FS_Organization_Name_for_Reports__c.field-meta.xml
<CustomField>
    <fullName>FS_Organization_Name_for_Reports__c</fullName>
    <description>For Report- If Primary Affiliation is not null then print it else print Organization Name</description>
    <formula>IF( FS_Primary_Affiliation__c !="", FS_Primary_Affiliation__r.Name  , FS_Organization_Name__c )</formula>
    <inlineHelpText>For Report- If Primary Affiliation is not null then print it else print Organization Name</inlineHelpText>
    <label>Organization Name for Reports</label>
    <type>Text</type>
</CustomField>