unpackaged/main/default/objects/Contact/fields/FS_Original_Join_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Original_Join_Date__c</fullName>
    <inlineHelpText>Original Join Date</inlineHelpText>
    <label>Original Join Date</label>
    <type>Date</type>
</CustomField>