unpackaged/main/default/objects/Contact/fields/FS_Other_County__c.field-meta.xml
<CustomField>
    <fullName>FS_Other_County__c</fullName>
    <formula>IF(FS_Tax_Exempt_Number__c &lt;&gt; NULL, "Tax Exempt",
IF(NOT(OtherState = "New York"), "Out of State",
IF(smartystreets__Other_Verified__c &amp;&amp; OtherState = "New York",
IF(CONTAINS(FS_API_Other_County__c, "Westchester") &amp;&amp; CONTAINS(OtherCity, "Yonkers"), "City of Yonkers Westchester",FS_API_Other_County__c),"New York State")))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Home Tax County</label>
    <type>Text</type>
</CustomField>