unpackaged/main/default/objects/Contact/fields/FS_Other_Designation__c.field-meta.xml
<CustomField>
    <fullName>FS_Other_Designation__c</fullName>
    <inlineHelpText>If your preferred designation does not appear in the list, you may provide it here (optional)</inlineHelpText>
    <label>Other Designation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>