unpackaged/main/default/objects/Contact/fields/FS_Other_Salutation__c.field-meta.xml
<CustomField>
    <fullName>FS_Other_Salutation__c</fullName>
    <inlineHelpText>Other Salutation(if applicable)</inlineHelpText>
    <label>Other Salutation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>