unpackaged/main/default/objects/Contact/fields/FS_Other_State_Code__c.field-meta.xml
<CustomField>
    <fullName>FS_Other_State_Code__c</fullName>
    <description>This is the two digit State code for the Home Address</description>
    <formula>TEXT(OtherStateCode)</formula>
    <inlineHelpText>This is the two digit State code for the Home Address</inlineHelpText>
    <label>Home State Code</label>
    <type>Text</type>
</CustomField>