unpackaged/main/default/objects/Contact/fields/FS_Out_of_State_First_Admit_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Out_of_State_First_Admit_Date__c</fullName>
    <label>Out of State First Admit Date</label>
    <type>Date</type>
</CustomField>