unpackaged/main/default/objects/Contact/fields/FS_Parent_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>FS_Parent_Affiliation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Affiliation</label>
    <referenceTo>FS_Affiliation__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>