unpackaged/main/default/objects/Contact/fields/FS_PassportExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>FS_PassportExpirationDate__c</fullName>
    <label>Passport Expiration Date</label>
    <type>Date</type>
</CustomField>