unpackaged/main/default/objects/Contact/fields/FS_PassportNumber__c.field-meta.xml
<CustomField>
    <fullName>FS_PassportNumber__c</fullName>
    <label>Passport Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>