unpackaged/main/default/objects/Contact/fields/FS_Practice_Interests__c.field-meta.xml
<CustomField>
    <fullName>FS_Practice_Interests__c</fullName>
    <description>Note: picklist values were created separately from global picklist on event, item and community group. If values are updated, be sure to update them in both locations.</description>
    <inlineHelpText>Select all that apply</inlineHelpText>
    <label>Practice Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alternative Dispute Resolution (General)</fullName>
            </value>
            <value>
                <fullName>Arbitration</fullName>
            </value>
            <value>
                <fullName>Mediation</fullName>
            </value>
            <value>
                <fullName>Antitrust &amp; Trade (General)</fullName>
            </value>
            <value>
                <fullName>Business &amp; Corporate (General)</fullName>
            </value>
            <value>
                <fullName>Business Organizations/Corporate Structure</fullName>
            </value>
            <value>
                <fullName>Franchise Law</fullName>
            </value>
            <value>
                <fullName>In-House Practice</fullName>
            </value>
            <value>
                <fullName>Mergers &amp; Acquisition</fullName>
            </value>
            <value>
                <fullName>Nonprofit Law</fullName>
            </value>
            <value>
                <fullName>Public Utilities</fullName>
            </value>
            <value>
                <fullName>Start-Ups &amp; Ventures</fullName>
            </value>
            <value>
                <fullName>Contracts (General)</fullName>
            </value>
            <value>
                <fullName>Criminal Law (General)</fullName>
            </value>
            <value>
                <fullName>Criminal Defense</fullName>
            </value>
            <value>
                <fullName>Criminal Prosecution</fullName>
            </value>
            <value>
                <fullName>DWI/DUI</fullName>
            </value>
            <value>
                <fullName>Diversity, Inclusion &amp; Civil Rights (General)</fullName>
            </value>
            <value>
                <fullName>Attorneys of Color</fullName>
            </value>
            <value>
                <fullName>Equal Opportunity Employment</fullName>
            </value>
            <value>
                <fullName>LGBTQ+ Legal Issues</fullName>
            </value>
            <value>
                <fullName>Veterans' Legal Issues</fullName>
            </value>
            <value>
                <fullName>Women and the Law</fullName>
            </value>
            <value>
                <fullName>Elder Law (General)</fullName>
                <label>Elder Law &amp; Special Needs (General)</label>
            </value>
            <value>
                <fullName>Disability &amp; Special Needs</fullName>
            </value>
            <value>
                <fullName>Guardianship</fullName>
            </value>
            <value>
                <fullName>Medicaid &amp; Medicare</fullName>
            </value>
            <value>
                <fullName>Social Security Law</fullName>
            </value>
            <value>
                <fullName>Entertainment, Arts &amp; Sports (General)</fullName>
            </value>
            <value>
                <fullName>Environmental &amp; Energy (General)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>