unpackaged/main/default/objects/Contact/fields/FS_Practice_Interests_Category__c.field-meta.xml
<CustomField>
    <fullName>FS_Practice_Interests_Category__c</fullName>
    <inlineHelpText>Practice Interests Category for staff side only. To be manually updated by staff</inlineHelpText>
    <label>Practice Interests Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alternative Dispute Resolution</fullName>
            </value>
            <value>
                <fullName>Antitrust and Trade</fullName>
            </value>
            <value>
                <fullName>Business &amp; Corporate</fullName>
            </value>
            <value>
                <fullName>Contracts</fullName>
            </value>
            <value>
                <fullName>Criminal Law</fullName>
            </value>
            <value>
                <fullName>Diversity, Inclusion &amp; Civil Rights</fullName>
            </value>
            <value>
                <fullName>Elder Law &amp; Special Needs</fullName>
            </value>
            <value>
                <fullName>Entertainment, Arts &amp; Sports</fullName>
            </value>
            <value>
                <fullName>Environmental &amp; Energy Law</fullName>
            </value>
            <value>
                <fullName>Ethics</fullName>
            </value>
            <value>
                <fullName>Family Law</fullName>
            </value>
            <value>
                <fullName>Finance &amp; Financial Services</fullName>
            </value>
            <value>
                <fullName>Food, Drug &amp; Cosmetics</fullName>
            </value>
            <value>
                <fullName>General/Multidisciplinary Practice</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Health Law</fullName>
            </value>
            <value>
                <fullName>Immigration Law</fullName>
            </value>
            <value>
                <fullName>Intellectual Property Law</fullName>
            </value>
            <value>
                <fullName>International Law</fullName>
            </value>
            <value>
                <fullName>Internet &amp; Technology Law</fullName>
            </value>
            <value>
                <fullName>Judiciary &amp; Courts</fullName>
            </value>
            <value>
                <fullName>Labor &amp; Employment</fullName>
            </value>
            <value>
                <fullName>Law Practice Management</fullName>
            </value>
            <value>
                <fullName>Litigation &amp; Trials</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>New York Civil Practice</fullName>
            </value>
            <value>
                <fullName>Pro Bono &amp; Public Good</fullName>
            </value>
            <value>
                <fullName>Professional Practice &amp; Development</fullName>
            </value>
            <value>
                <fullName>Real Property Law</fullName>
            </value>
            <value>
                <fullName>Tax Law</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>