unpackaged/main/default/objects/Contact/fields/FS_Preferred_Email__c.field-meta.xml
<CustomField>
    <fullName>FS_Preferred_Email__c</fullName>
    <formula>IF(ISPICKVAL(OrderApi__Preferred_Email_Type__c,"Personal"),OrderApi__Personal_Email__c,
IF(ISPICKVAL(OrderApi__Preferred_Email_Type__c,"Work"),OrderApi__Work_Email__c,
IF(ISPICKVAL(OrderApi__Preferred_Email_Type__c,"Other"),OrderApi__Other_Email__c,
IF(ISPICKVAL(OrderApi__Preferred_Email_Type__c,"Assistant"),OrderApi__Assistant_Email__c, ''))))</formula>
    <label>FS Preferred Email</label>
    <type>Text</type>
</CustomField>