unpackaged/main/default/objects/Contact/fields/FS_Preferred_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>FS_Preferred_Mailing_Address__c</fullName>
    <label>Preferred Mailing Address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Work/School</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>