unpackaged/main/default/objects/Contact/fields/FS_Preferred_Mailing_JD__c.field-meta.xml
<CustomField>
    <fullName>FS_Preferred_Mailing_JD__c</fullName>
    <formula>IF(ISPICKVAL(FS_Preferred_Mailing_Address__c,'Work/School'),FS_Work_School_Judicial_District__c,
IF(ISPICKVAL(FS_Preferred_Mailing_Address__c,'Home'), FS_Home_Judicial_District__c ,''))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferred Mailing JD</label>
    <type>Text</type>
</CustomField>