unpackaged/main/default/objects/Contact/fields/FS_Preferred_Name_First__c.field-meta.xml
<CustomField>
    <fullName>FS_Preferred_Name_First__c</fullName>
    <inlineHelpText>Your nickname (if different from First Name listed), or other preferred form of address. This name may appear on your name tag at events.</inlineHelpText>
    <label>Preferred Name (First)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>