unpackaged/main/default/objects/Contact/fields/FS_Preferred_Prefix__c.field-meta.xml
<CustomField>
    <fullName>FS_Preferred_Prefix__c</fullName>
    <inlineHelpText>Examples: Mr., Ms., Hon., Dr., Prof., Lic., Col., etc.</inlineHelpText>
    <label>Preferred Prefix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>